FIX - left-text-panel promo panel mobile spacing fix

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -212,7 +212,7 @@ $promo-max-width:   60em;
                             }
 
                             p {
-                                padding-top: 3.5em;
+                                padding-top: 2.5em;
                             }
 
                             .button {
